@@ -486,11 +486,13 @@ const_string PTFTOPLHELP[] = {
 
 #if defined (TANGLE) || defined (TANGLEBOOT)
 const_string TANGLEHELP[] = {
-    "Usage: tangle [OPTION]... WEBFILE[.web] [CHANGEFILE[.ch]]",
+    "Usage: tangle [OPTION] WEBFILE[.web] [{CHANGEFILE[.ch]|-} [OUTFILE[.p]]]",
     "  Tangle WEBFILE with CHANGEFILE into a Pascal program.",
     "  Default CHANGEFILE is " DEV_NULL ";",
     "  Pascal output goes to the basename of WEBFILE extended with `.p',",
-    "  and a string pool file, if necessary, to the same extended with `.pool'.",
+    "  unless otherwise specified by OUTFILE,",
+    "  and a string pool file, if necessary, to the same extended with `.pool';",
+    "  in this case, '-' specifies a null CHANGEFILE.",
     "",
     "-length=NUMBER the first NUMBER characters of an identifier have to be",
     "                unique (default 32)",
@@ -627,10 +629,12 @@ const_string VPTOVFHELP[] = {
 
 #ifdef WEAVE
 const_string WEAVEHELP[] = {
-    "Usage: weave [OPTION]... WEBFILE[.web] [CHANGEFILE[.ch]]",
+    "Usage: weave [OPTION] WEBFILE[.web] [{CHANGEFILE[.ch]|-} [OUTFILE[.tex]]]",
     "  Weave WEBFILE with CHANGEFILE into a TeX document.",
     "  Default CHANGEFILE is " DEV_NULL ";",
-    "  TeX output goes to the basename of WEBFILE extended with `.tex'.",
+    "  TeX output goes to the basename of WEBFILE extended with `.tex',",
+    "  unless otherwise specified by OUTFILE;",
+    "  in this case, '-' specifies a null CHANGEFILE.",
     "",
     "-x          omit cross-reference information",
     "-help       display this help and exit",
