@@ -1,3 +1,8 @@
+2022-03-02  Andreas Scherer  <https://ascherer.github.io>
+
+	* tangle.man,
+	* weave.man: Describe the third file name on the commandline.
+
 2022-02-26  Karl Berry  <karl@tug.org>
 
 	* Makefile.am (web_man_sources): add twill.man.
